syntax = "proto3";

package brij.storage.v1;

import "google/protobuf/timestamp.proto";

option go_package = 'brij.fi/storage';

enum DataType {
  DATA_TYPE_UNSPECIFIED = 0;
  DATA_TYPE_PHONE = 1;
  DATA_TYPE_EMAIL = 2;
  DATA_TYPE_NAME = 3;
  DATA_TYPE_BIRTH_DATE = 4;
  DATA_TYPE_DOCUMENT = 5;
  DATA_TYPE_BANK_INFO = 6;
  DATA_TYPE_SELFIE_IMAGE = 7;
}

message Name {
  string first_name = 1;
  string last_name = 2;
}

message BirthDate {
  google.protobuf.Timestamp value = 1;
}

enum DocumentType {
  DOCUMENT_TYPE_UNSPECIFIED = 0;
  DOCUMENT_TYPE_VOTER_ID = 1;
}

message Document {
  DocumentType type = 1;
  string number = 2;
  string country_code = 3;
}

message BankInfo {
  string account_number = 1;
  string bank_code = 2;
  string bank_name = 3;
}

message Email {
  string value = 1;
}

message SelfieImage {
  bytes value = 1;
}

message Phone {
  string value = 1;
}
